project1/base/03-multi-container-redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-redis-pod
  namespace: demo-namespace
  labels:
    app.kubernetes.io/name: nginx-redis-app
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
      - containerPort: 80
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  - name: redis
    image: redis:latest
    ports:
      - containerPort: 6379
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
