project1/base/04-multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
  namespace: demo-namespace
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
  - name: nginx
    image: nginx:latest
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
  - name: redis
    image: redis:latest
    command: ["sleep", "1000"]
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
