project1/base/07-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-demo-pod
  labels:
    purpose: demonstrate-envars
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
