project1/base/19-live-readiness.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: live-readiness
  name: live-readiness
spec:
  containers:
  - name: live-readiness
    image: nginx
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 30
      periodSeconds: 10
    readinessProbe:
      httpGet:
        path: /
        port: 80
      initialDelaySeconds: 40
      periodSeconds: 3
