project1/base/12-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    purpose: service-demo
spec:
  selector:
    purpose: service-demo
    project: roboshop
    environment: dev
  ports:
    - protocol: TCP
      port: 80        # Port exposed by the service
      targetPort: 80  # Port on the container (nginx)
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    purpose: service-demo
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
