project1/base/14-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  labels:
    purpose: service-lb-demo
spec:
  type: LoadBalancer
  selector:
    purpose: service-lb-demo
    project: roboshop
    environment: dev
  ports:
    - protocol: TCP
      port: 80        # Port exposed by the service
      targetPort: 80  # Port on the container (nginx)
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-lb
  labels:
    purpose: service-lb-demo
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx
