project1/base/17-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-headless
  labels:
    purpose: statefulset
spec:
  ports:
  - port: 80
    name: web
  clusterIP: None
  selector:
    purpose: statefulset
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-normal
  labels:
    purpose: statefulset
spec:
  ports:
  - port: 80
    name: web
  selector:
    purpose: statefulset
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-lb
  labels:
    purpose: statefulset
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: web
  selector:
    purpose: statefulset
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
spec:
  serviceName: "nginx-svc-headless"
  replicas: 3
  selector:
    matchLabels:
      purpose: statefulset
  template:
    metadata:
      labels:
        purpose: statefulset
    spec:
      containers:
      - name: nginx
        image: nginx:1.21.6
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: www
          mountPath: /usr/share/nginx/html
  volumeClaimTemplates:
  - metadata:
      name: www
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "default"
      resources:
        requests:
          storage: 1Gi
